fixed scaling on mobile, added new url for spline

--- a/styles.scss
+++ b/styles.scss
@@ -5,6 +5,10 @@ $font-color-1: #e0e0e0;
 $font-color-link: #ecb063;
 $border-color-1: #3e3e3e;
 
+html, body {
+  overflow-x: hidden !important;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -162,14 +166,23 @@ header {
   //padding-left: -100px;
   //padding-right: -100px;
   height: 100vh;
+
   margin-left: -200px;
   margin-right: -200px;
+
+  //width:100vw;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   //margin-bottom: -300px; //glitches the sort button
-  margin-bottom: 100px;
-  margin-top: -150px;
+  margin-bottom: 200px;
+  padding-bottom: 100px;
+  margin-top: -120px;
   background-color: $bg-color-primary;
   text-align:center;
-  overflow: hidden;
+  overflow: clip;
   z-index: 1;
   //width: auto;
 
